<resources>
    <string name="app_name">Task-Trove</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="image">image</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_progress">In Progress</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="update">Update</string>
</resources>