<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/livvic_semi_bold_italic"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/interextrabold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/signin_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/black"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signup_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/black"
                android:text="@string/sign_in"
                android:textColor="@color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/task_list"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:rotation="30"
                android:src="@drawable/task_list" />

            <ImageView
                android:id="@+id/check_time"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_toEndOf="@+id/task_list"
                android:contentDescription="@string/image"
                android:src="@drawable/checktime" />

            <ImageView
                android:id="@+id/check_box"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/check_time"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:rotation="-30"
                android:src="@drawable/checkbox" />

            <ImageView
                android:id="@+id/hourglass"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="70dp"
                android:layout_toEndOf="@+id/task_list"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:rotation="0"
                android:src="@drawable/hourglass" />

            <ImageView
                android:id="@+id/circle"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/hourglass"
                android:contentDescription="@string/image"
                android:padding="5dp"
                android:rotation="0"
                android:src="@drawable/circle" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>